--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,10 @@
             <version>${security-oauth2}</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
 
     </dependencies>
 
